프로젝트 설명 추가

--- a/public/markdown/project/3.md
+++ b/public/markdown/project/3.md
@@ -1,7 +1,5 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
-  - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+- **프로젝트 아이디어 제공, 팀 빌딩 주도**
+- 전제 서비스 디자인 담당
+- **full calendar**를 이용한 일정 관리 기능 담당
+  - 일정에 대한 `CRUD`기능 구현
+- 커뮤니티 게시글별 공감 기능과 댓글별 좋아요 기능 구현
