--- a/public/markdown/project/1.md
+++ b/public/markdown/project/1.md
@@ -1,7 +1,4 @@
-- **‘Cause I know what you like boy**
-- **You're my chemical `hype boy`**
-- 내 지난날들은 눈 뜨면 잊는 꿈
+- JPA를 이용한 회원 DB설계 
+- 구글 / 네이버 소셜 로그인 구현
   - `Hype boy` 너만 원해 `Hype boy` 내가 전해
-- And we can go high **말해봐** yeah **느껴봐** mm mm
-- Take him to the sky
-- You know I `hype you boy`
+- 선생님과 학생이 연동된 과외일지 관리기능 구현
