--- a/public/markdown/project/2.md
+++ b/public/markdown/project/2.md
@@ -1,7 +1,3 @@
-- Oh my, oh my God 예상했어 나
-  - I was really hoping that `he will come through`
-- Oh my, oh my God 단 너뿐이야
-  - Asking all the time about `what I should do`
-- No, I can never `let him go` 너만 생각나 `twenty-four` 난 행운아야 정말로 `I know, I know`
-- 널 알기 전까지는 나 `의미 없었어` 전부 다 **내 맘이 끝이 없는 걸** `I know, I know`
-- **I'm going crazy, right?**
+- **회원가입 및 로그인** 기능 구현
+- 사용자의 소원 **등록 및 수정** 기능 구현
+- 소원의 공개 & 비공개 기능을 통한 전체, 개인 조회 기능 구현
