--- a/public/markdown/project/5.md
+++ b/public/markdown/project/5.md
@@ -1,4 +1,5 @@
 - **현재 진행인 프로젝트 입니다.**
 - 원활한 프로젝트 진행을 위한 `Jira`를 사용하여 스프린트 단위로 개발중
 - 빠른 개발을 위해 공통 기술 스택인 styled-components 사용
-- 사용자 특성상 주로 사용하는 태블릿PC 전용 **반응형 페이지** 구현중
+- 상태관리를 위해서 Redux-toolkit과 redux-persist 사용하여 사용자 정보관리 
+- 통계 자료 시각화를 위한 ApexChart Open API 사용
