--- a/public/markdown/project/6.md
+++ b/public/markdown/project/6.md
@@ -1,3 +1,4 @@
-- Commit 컨벤션을 지정하여 프로젝트를 관리
-- DB 설계 및 사용자의 일기 작성, 조회, 삭제 기능 구현
-- `Docker`,`k8`, `Jenkins`를 사용하여 프로젝트 배포
+- Next.js, Prisma, Superbase를 이용한 Api 설계와 데이터베이스 모델링 
+- Next-Auth를 이용하여 SNS 사용자 인증 구현
+- Recoil을 이용하여 지도 마커 관리
+- TailwindCSS 를 사용한 프로젝트 스타일링
